--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   </servlet>
   
   <welcome-file-list>
-    <welcome-file>companies.xhtml</welcome-file>
+    <welcome-file>login.xhtml</welcome-file>
   </welcome-file-list>
   
   <servlet-mapping>
